apps/homeassistant/ha.ns.yml
apiVersion: v1
kind: Namespace
metadata:
 labels:
  kubernetes.io/metadata.name: ha
  name: ha
 name: ha
spec:
 finalizers:
  - kubernetes
status:
 phase: Active
