apps/homeassistant/zwave.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: zwave
 namespace: ha
spec:
 replicas: 1
 strategy:
  type: Recreate
 selector:
  matchLabels:
   app: zwave
 template:
  metadata:
   labels:
    app: zwave
  spec:
   containers:
    - name: zwave
      image: zwavejs/zwave-js-ui:11.20.0
      imagePullPolicy: IfNotPresent
      securityContext:
       allowPrivilegeEscalation: true
       privileged: true
      resources:
       requests:
        cpu: 100m
        memory: 128Mi
       limits:
        rpi-k3s/zwave: 1
      ports:
       - containerPort: 8091
         name: http
         protocol: TCP
       - containerPort: 3000
         name: websockets
         protocol: TCP
      volumeMounts:
       - mountPath: /usr/src/app/store
         subPath: zwave
         name: zwave
       - mountPath: /dev/zwave
         name: zwavestick
   volumes:
    - name: zwave
      persistentVolumeClaim:
       claimName: ha
    - name: zwavestick
      hostPath:
       path: /dev/serial/by-id/usb-Zooz_800_Z-Wave_Stick_533D004242-if00
