apps/homeassistant/zwave.service.yml
apiVersion: v1
kind: Service
metadata:
 name: zwave
 namespace: ha
spec:
 type: ClusterIP
 selector:
  app: zwave
 ports:
  - name: http
    port: 8091
    targetPort: 8091
  - name: websockets
    port: 3000
    targetPort: 3000
 externalIPs:
  - '${METAL_LB_IP1}'
